# fast-graphrag

./: pyproject.toml
fast_graphrag/: _graphrag.py
fast_graphrag/_llm/: __init__.py  _llm_vertexai.py
fast_graphrag/_services/: _state_manager.py
