[project]
authors = [
    {name = "Luca Pinchetti", email = "luca@circlemind.co"},
    {name = "Antonio Vespoli", email = "antonio@circlemind.co"},
    {name = "Yuhang Song", email = "yuhang@circlemind.co"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "igraph<1.0.0,>=0.11.6",
    "xxhash<4.0.0,>=3.5.0",
    "pydantic<3.0.0,>=2.9.2",
    "scipy<2.0.0,>=1.14.1",
    "scikit-learn<2.0.0,>=1.5.2",
    "tenacity<10.0.0,>=9.0.0",
    "openai<2.0.0,>=1.52.1",
    "scipy-stubs<2.0.0.0,>=1.14.1.5",
    "hnswlib<1.0.0,>=0.8.0",
    "instructor<2.0.0,>=1.6.3",
    "requests<3.0.0,>=2.32.3",
    "python-dotenv<2.0.0,>=1.0.1",
]
name = "fast-graphrag"
version = "0.0.5"
description = ""
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.7.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"_prompt.py" = ["E501"]
